# mdtools

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: add_tag.rs  file_utils.rs  git_utils.rs  lib.rs  main.rs
src/commands/: add_tag.rs  make_footlink.rs  mk_footlinks.rs  mod.rs  publish.rs
src/env_settings/: mod.rs  obsidian_hugo.rs
tests/: add_tag.rs  file.md  mk_footlink.rs  mk_footlinks.rs
