[package]
name = "hugox"
version = "0.1.0"
edition = "2021"
description = "A companion to help edit markdown."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jason1105/hugox"
license-file = "LICENSE"
keywords = ["markdown", "tools", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
regex = "1.5.5"
walkdir = "2"

[dependencies.lazy_static]
version = "1.0"