[package]
name = "mdtools"
version = "0.1.0"
edition = "2021"
description = "A tools to help edit markdown."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jason1105/hugox"
keywords = ["markdown", "tools", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
regex = "1.5.5"
walkdir = "2"
log = "0.4.0"
env_logger = "0.9.0"

[dependencies.lazy_static]
version = "1.0"